# micro-physics

./: CMakeLists.txt  LICENSE
include/uphysics/: AABox3.hpp  CollisionObject.hpp  CollisionShape.hpp  ContactManifold.hpp  ContactPoint.hpp  Frustum.hpp  GJK.hpp  Math.hpp  Matrix3x3.hpp  Matrix4x4.hpp  PhysicsWorld.hpp  Plane.hpp  Quaternion.hpp  Ray.hpp  RigidBody.hpp  RigidTransform.hpp  Sphere.hpp  TRSTransform.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/: CMakeLists.txt  CollisionObject.cpp  CollisionShape.cpp  ContactPoint.cpp  Frustum.cpp  PhysicsWorld.cpp  RigidBody.cpp
tests/: CMakeLists.txt  GJKTests.cpp  MathTests.cpp  RayCastingTest.cpp  RigidBodyTests.cpp
